# digital_forensics

./: README.md  pyproject.toml
tp1/: assignment1.ipynb  assignment1_DenisFedosov_DF.ipynb
tp2/: assignment2_DenisFedosov_DF.ipynb
tp3/: assignment3_DenisFedosov_DF.ipynb
tp5/: add_gaussian_noise.ipynb  assignment5_DenisFedosov.ipynb
tp6/: assignment6_DenisFedosov.ipynb  lena256_task3_green.tiff
