[tool.poetry]
name = "df"
version = "0.1.0"
description = "Digital Forensics 2024 Labs"
authors = ["Denis Fedosov <denis.fedosov@etu.unige.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
numpy = "^2.1.1"
opencv-python = "^4.10.0.84"
scikit-image = "^0.24.0"
lpips = "^0.1.4"
torch = "^2.4.1"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pywavelets = "^1.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
